--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,11 @@
             <artifactId>HikariCP</artifactId>
             <version>6.2.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
+        </dependency>
         <dependency>
             <groupId>jakarta.mail</groupId>
             <artifactId>jakarta.mail-api</artifactId>
