--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 db.url=jdbc:mysql://localhost:3306/drum_store
 db.username=root
-db.password=dong14052004
+db.password=
 db.driver=com.mysql.cj.jdbc.Driver
